--- a/index.html
+++ b/index.html
@@ -6,21 +6,86 @@
     <title>AURA</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/styles.css">
+    <style>
+        body {
+            margin: 0;
+            background-color: black;
+            color: grey;
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        #loading-screen {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: black;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+        }
+        .logo {
+            font-size: 3rem;
+            color: rgb(250, 250, 8);
+            font-weight: bold;
+        }
+        .bus {
+            position: absolute;
+            bottom: 20%;
+            left: -150px;
+            width: 100px;
+            animation: moveBus 5s ease-in-out 1s forwards;
+        }
+        @keyframes moveBus {
+            from { left: -150px; }
+            to { left: 100%; }
+        }
+        .footer-text {
+            position: absolute;
+            bottom: 10%;
+            font-size: 1.2rem;
+        }
+        .loading-text {
+            margin-top: 20px;
+            font-size: 1.5rem;
+        }
+        #container {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
+    <div id="loading-screen">
+        <div class="logo">AURA</div>
+        <img src="image/bus.png" class="bus" alt="Magic School Bus">
+        <div class="footer-text">from<br>Magic School Bus</div>
+    </div>
+
     <div id="container">
         <nav class="navbar">
-                <div><a href="/">Home</a></div>
-                <div><a href="/about">About</a></div>
-                <div><a href="/contact">Contact</a></div>
-                <div><a href="/login">Login</a></div>
+            <div><a href="/">Home</a></div>
+            <div><a href="/about">About</a></div>
+            <div><a href="/contact">Contact</a></div>
+            <div><a href="/login">Login</a></div>
         </nav>
         <main class="main">
-            <h1>Welcome to AURA</h1>
+            <img src="image/aura.png" alt="AURA Image" class="fade-in" width="300">
         </main>
     </div>
+
     <script src="js/app.js"></script>
+    <script>
+        setTimeout(() => {
+            document.getElementById('loading-screen').style.display = 'none';
+            document.getElementById('container').style.display = 'block';
+        }, 12000); // 7s delay + 5s animation
+    </script>
 </body>
 
 </html>
