--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8" />
+    <script> // for github pages base href
+        if (window.location.hostname === "krnsa.github.io") {
+            document.write('<base href="https://krnsa.github.io/AURA/">');
+        }
+    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/menu.css">
 </head>
+
 <body>
     <div id="loading-screen">
         <h1 class="aura-title">AURA</h1>
@@ -23,28 +30,38 @@
             <div class="shadow"></div>
         </div>
     </div>
-    
-        <div class="menu">
-            <ul class="menu-content">
-                <li><a href="/"><span class="material-symbols-outlined">home</span><span>Home</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">dashboard</span><span>Search</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">explore</span><span>Messages</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">settings</span><span>Create</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">person</span><span>Profile</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">report</span><span>Shop</span></a></li>
-                <li><a href="/"><span class="material-symbols-outlined">email</span><span>More</span></a></li>
-                <li><a href="/login/"><span class="material-symbols-outlined">login</span><span>Logout</span></a></li>
-            </ul>
-        </div>
 
-        <div class="ui-switch">
-            <label for="dark-mode-toggle" class="slider">
-                <div class="circle"></div>
-            </label>
-        </div>
+    <div class="menu">
+        <ul class="menu-content">
+            <li><a href="login/index.html"><span class="material-symbols-outlined">home</span><span>Home</span></a></li>
+            <li><a href="login/index.html"><span
+                        class="material-symbols-outlined">dashboard</span><span>Search</span></a></li>
+            <li><a href="login/index.html"><span
+                        class="material-symbols-outlined">explore</span><span>Messages</span></a></li>
+            <li><a href="login/index.html"><span
+                        class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
+            <li><a href="login/index.html"><span
+                        class="material-symbols-outlined">settings</span><span>Create</span></a></li>
+            <li><a href="login/index.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
+            </li>
+            <li><a href="login/index.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a>
+            </li>
+            <li><a href="login/index.html"><span class="material-symbols-outlined">email</span><span>More</span></a>
+            </li>
+            <li><a href="login/index.html" index.html><span
+                        class="material-symbols-outlined">login</span><span>Login</span></a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="ui-switch">
+        <label for="dark-mode-toggle" class="slider">
+            <div class="circle"></div>
+        </label>
+    </div>
     </div>
 
     <script type="module" src="js/app.js"></script>
 </body>
+
 </html>
