--- a/login/index.html
+++ b/login/index.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <meta name="description" content="Login to AURA - Social Media Platform" />
+  <title>AURA - Login</title>
   <link rel="stylesheet" href="../css/login.css" />
+  <link rel="stylesheet" href="css/global.css">
 </head>
 
 <body>
