--- a/login/index.html
+++ b/login/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Login to AURA - Social Media Platform" />
+    <title>AURA - Login</title>
+    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/global.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Login to AURA - Social Media Platform" />
-  <title>AURA - Login</title>
-  <link rel="stylesheet" href="../css/login.css" />
-  <link rel="stylesheet" href="css/global.css">
-</head>
+  <body>
+    <div class="login-container">
+      <h2>Login</h2>
 
-<body>
+      <form id="login-form">
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input
+            type="text"
+            id="username"
+            name="username"
+            required
+            placeholder="Enter your username"
+          />
+        </div>
 
-  <div class="login-container">
-    <h2>Login</h2>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input
+            type="password"
+            id="password"
+            name="password"
+            required
+            placeholder="Enter your password"
+          />
+        </div>
 
-    <form id="login-form">
+        <button type="submit">Login</button>
+      </form>
+    </div>
 
-      <div class="form-group">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required placeholder="Enter your username" />
-      </div>
-
-      <div class="form-group">
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required placeholder="Enter your password" />
-      </div>
-
-      <button type="submit">Login</button>
-
-    </form>
-  </div>
-
-  <script type="module" src="../js/login.js"></script>
-</body>
-
+    <script type="module" src="../js/login.js"></script>
+  </body>
 </html>
