Sets up backend and restructures frontend
Adds initial backend setup with Express and Supabase
Renames and reorganizes frontend assets
Updates README and documentation

--- a/frontend/pages/index.html
+++ b/frontend/pages/index.html
@@ -3,16 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <script> // for github pages base href
-        if (window.location.hostname === "krnsa.github.io") {
-            document.write('<base href="https://krnsa.github.io/AURA/">');
-        }
-    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/home.css">
 </head>
 
 <body>
@@ -20,7 +14,7 @@
         <h1 class="aura-title">AURA</h1>
         <p class="from-text">from</p>
         <p class="magic-bus">Magic School Bus</p>
-        <img src="image/bus.png" class="bus" alt="Magic School Bus">
+        <img src="../assets/img/bus.png" class="bus" alt="Magic School Bus">
         <div class="wrapper">
             <div class="circle"></div>
             <div class="circle"></div>
@@ -33,22 +27,22 @@
 
     <div class="menu">
         <ul class="menu-content">
-            <li><a href="login/index.html"><span class="material-symbols-outlined">home</span><span>Home</span></a></li>
-            <li><a href="login/index.html"><span
+            <li><a href="./login.html"><span class="material-symbols-outlined">home</span><span>Home</span></a></li>
+            <li><a href="./login.html"><span
                         class="material-symbols-outlined">dashboard</span><span>Search</span></a></li>
-            <li><a href="login/index.html"><span
+            <li><a href="./login.html"><span
                         class="material-symbols-outlined">explore</span><span>Messages</span></a></li>
-            <li><a href="login/index.html"><span
+            <li><a href="./login.html"><span
                         class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
-            <li><a href="login/index.html"><span
+            <li><a href="./login.html"><span
                         class="material-symbols-outlined">settings</span><span>Create</span></a></li>
-            <li><a href="login/index.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
+            <li><a href="./login.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
             </li>
-            <li><a href="login/index.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a>
+            <li><a href="./login.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a>
             </li>
-            <li><a href="login/index.html"><span class="material-symbols-outlined">email</span><span>More</span></a>
+            <li><a href="./login.html"><span class="material-symbols-outlined">email</span><span>More</span></a>
             </li>
-            <li><a href="login/index.html" index.html><span
+            <li><a href="./login.html" index.html><span
                         class="material-symbols-outlined">login</span><span>Login</span></a>
             </li>
         </ul>
@@ -61,7 +55,7 @@
     </div>
     </div>
 
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="../assets/js/home.js"></script>
 </body>
 
 </html>
