--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Login to AURA - Social Media Platform" />
     <title>AURA - Login</title>
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/global.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/login.css" />
   </head>
 
   <body>
@@ -40,6 +40,6 @@
       </form>
     </div>
 
-    <script type="module" src="../js/login.js"></script>
+    <script type="module" src="../assets/js/login.js"></script>
   </body>
 </html>
