Add user registration and login functionality with JWT and bcrypt support

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -28,6 +28,7 @@
       <button type="submit">Login</button>
       <div id="error-container"></div>
     </form>
+    <p>Don't have an account? <a href="./register.html">Register here</a></p>
   </div>
 
   <script type="module" src="../js/login.js"></script>
