Refactor authentication: remove bcrypt dependency and update password handling; add profile page and related functionality

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
                         class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
             <li><a href="./login.html"><span class="material-symbols-outlined">settings</span><span>Create</span></a>
             </li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
+            <li><a href="./profile.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
             </li>
             <li><a href="./login.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a>
             </li>
