Enhance Authentication, UI/UX, and Frontend Cleanup
- **Authentication & Login Flow:**
  - Improved login and registration logic with better error handling and robust token validation.
  - Updated login.js to redirect to the home page after a successful login.

- **UI/UX Enhancements:**
  - Updated navigation links and overall page structure in index.html and profile.html.
  - Enhanced UI/UX consistency and responsiveness with new animations and CSS styles.

- **CSS & Styling Updates:**
  - Added new CSS file (register.css) for styling the registration page.
  - Updated profile.css with new layout improvements and additional styles.

- **Code Refactoring & Cleanup:**
  - Refactored global.js to enhance token validation and redirection logic.
  - Cleaned up profile.js to streamline post fetching and user statistics updates.
  - Adjusted the loading screen behavior in index.js for smoother transitions.
  - Removed unused files: deleted obsolete CSS (post.css) and HTML (post.html) files.

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Login to AURA - Social Media Platform" />
     <title>AURA - Register</title>
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/register.css" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
         <p>Already have an account? <a href="./login.html">Login here</a></p>
     </div>
 
-    <script type="module" src="../js/register.js"></script>
+    <script type="module" src="./js/register.js"></script>
 </body>
 
 </html>
