--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,24 +28,50 @@
 
     <div class="menu">
         <ul class="menu-content">
-            <li><a href="./login.html"><span class="material-symbols-outlined">home</span><span>Home</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Home</span>
+                </a>
             </li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">dashboard</span><span>Search</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">dashboard</span>
+                    <span>Search</span>
+                </a>
             </li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">explore</span><span>Messages</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">explore</span>
+                    <span>Messages</span>
+                </a>
             </li>
-            <li><a href="./login.html"><span
-                        class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">settings</span><span>Create</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">analytics</span>
+                    <span>Notifications</span>
+                </a>
             </li>
-            <li><a href="./profile.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">settings</span>
+                    <span>Create</span>
+                </a>
             </li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a>
+            <li><a href="/profile.html">
+                    <span class="material-symbols-outlined">person</span>
+                    <span>Profile</span>
+                </a>
             </li>
-            <li><a href="./login.html"><span class="material-symbols-outlined">email</span><span>More</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">report</span>
+                    <span>Shop</span>
+                </a>
             </li>
-            <li><a href="./login.html" index.html><span
-                        class="material-symbols-outlined">login</span><span>Login</span></a>
+            <li><a href="/">
+                    <span class="material-symbols-outlined">email</span>
+                    <span>More</span>
+                </a>
+            </li>
+            <li><a href="/login.html">
+                    <span class="material-symbols-outlined">login</span>
+                    <span>Login</span>
+                </a>
             </li>
         </ul>
     </div>
