--- a/frontend/login.html
+++ b/frontend/login.html
@@ -31,7 +31,7 @@
     <p>Don't have an account? <a href="./register.html">Register here</a></p>
   </div>
 
-  <script type="module" src="../js/login.js"></script>
+  <script type="module" src="./js/login.js"></script>
 </body>
 
 </html>
