--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -5,27 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
-    <script src="./js/global.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
-    <div id="loading-screen">
-        <h1 class="aura-title">AURA</h1>
-        <p class="from-text">from</p>
-        <p class="magic-bus">Magic School Bus</p>
-        <img src="./img/bus.png" class="bus" alt="Magic School Bus">
-        <div class="wrapper">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-        </div>
-    </div>
-
+<H1>SHOPPING STORE</H1>
     <div class="menu">
         <ul class="menu-content">
             <li><a href="/">
