Add shop page with styles and JavaScript

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/shop.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
     </div>
     </div>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/shop.js"></script>
 </body>
 
 </html>
