Update navigation links to point to messages page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
                     <span>Search</span>
                 </a>
             </li>
-            <li><a href="/">
+            <li><a href="/messages.html">
                     <span class="material-symbols-outlined">explore</span>
                     <span>Messages</span>
                 </a>
