--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -25,7 +25,7 @@
           </a>
         </li>
         <li>
-          <a href="/">
+          <a href="/messages.html">
             <span class="material-symbols-outlined">explore</span>
             <span>Messages</span>
           </a>
