Update messages page styles and script references

--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -7,7 +7,7 @@
     <title>AURA</title>
     <script src="./js/global.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/messages.css">
 </head>
 
 <body>
@@ -70,7 +70,7 @@
     </div>
     </div>
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/messages.js"></script>
 </body>
 
 </html>
