--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    <H1>Messages Sections</H1>
+
+    <div class="messages-container">
+      <div class="messages-header">
+          <h2>Messages</h2>
+      </div>
+      <div class="messages-content">
+
+      </div>
+  </div>
 
     <div class="menu">
         <ul class="menu-content">
