Adds conversation list structure to messages page

--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -17,7 +17,22 @@
           <h2>Messages</h2>
       </div>
       <div class="messages-content">
-
+        <!-- Inside the messages-content div -->
+<div class="conversation-list">
+  <div class="conversation active">
+      <div class="avatar">
+          <img src="/images/avatar1.jpg" alt="Avatar" onerror="this.src='/images/default-avatar.png'">
+      </div>
+      <div class="conversation-info">
+          <h3>Emma Smith</h3>
+          <p>Hey, how are you doing today?</p>
+      </div>
+      <div class="conversation-time">
+          <span>2:30 PM</span>
+      </div>
+  </div>
+  </div>
+</div>
       </div>
   </div>
 
