Fix avatar image error handling in conversation list

--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -21,7 +21,7 @@
 <div class="conversation-list">
   <div class="conversation active">
       <div class="avatar">
-          <img src="/images/avatar1.jpg" alt="Avatar" onerror="this.src='/images/default-avatar.png'">
+          <img src="/images/avatar1.jpg" alt="Avatar">
       </div>
       <div class="conversation-info">
           <h3>Emma Smith</h3>
