--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -32,6 +32,30 @@
           </div>
         </div>
       </div>
+
+      <div class="chat-area">
+        <div class="chat-header">
+          <div class="chat-contact">
+            <div class="avatar">
+              <img src="/images/avatar1.jpg" alt="Avatar">
+            </div>
+            <div class="contact-info">
+              <h3>Emma Smith</h3>
+
+            </div>
+          </div>
+          <div class="chat-actions">
+          </div>
+        </div>
+
+        <div class="chat-messages">
+        </div>
+
+        <div class="chat-input">
+          <input type="text" placeholder="Type a message...">
+          <span class="material-symbols-outlined send-btn">send</span>
+        </div>
+      </div>
     </div>
   </div>
 
