Add sample chat messages and date display to messages page

--- a/frontend/messages.html
+++ b/frontend/messages.html
@@ -44,11 +44,49 @@
 
             </div>
           </div>
-          <div class="chat-actions">
-          </div>
         </div>
 
         <div class="chat-messages">
+          <!-- Inside the chat-messages div -->
+          <div class="message-date">
+            <span>Today</span>
+          </div>
+
+          <div class="message received">
+            <div class="message-content">
+              <p>Hey there! How's your day going?</p>
+              <span class="message-time">10:30 AM</span>
+            </div>
+          </div>
+
+          <div class="message sent">
+            <div class="message-content">
+              <p>Hi Emma! It's going well, thanks for asking. Just working on some updates for the project. How about
+                you?</p>
+              <span class="message-time">10:35 AM</span>
+            </div>
+          </div>
+
+          <div class="message received">
+            <div class="message-content">
+              <p>I'm good! Just finished my morning meeting. Do you have time to catch up on the design changes?</p>
+              <span class="message-time">10:40 AM</span>
+            </div>
+          </div>
+
+          <div class="message sent">
+            <div class="message-content">
+              <p>Sure thing! I'm free around 2 PM if that works for you?</p>
+              <span class="message-time">10:42 AM</span>
+            </div>
+          </div>
+
+          <div class="message received">
+            <div class="message-content">
+              <p>Perfect! I'll send a calendar invite shortly.</p>
+              <span class="message-time">10:45 AM</span>
+            </div>
+          </div>
         </div>
 
         <div class="chat-input">
