--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Login to AURA - Social Media Platform" />
   <title>AURA - Login</title>
+  <script src="./js/global.js"></script>
   <link rel="stylesheet" href="../css/styles.css" />
   <link rel="stylesheet" href="../css/login.css" />
 </head>
