--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
     </div>
 
     <script type="module" src="./js/index.js"></script>
-    <script type="module" src="./js/notifications.js"></script>
+    <!-- <script type="module" src="./js/notifications.js"></script> -->
 </body>
 
 </html>
