--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -11,7 +11,81 @@
 </head>
 
 <body>
-<H1>SHOPPING STORE</H1>
+
+    <div class="shop-container">
+        <div class="shop-header">
+            <h2>Shop</h2>
+            <div class="search-input-container">
+                <input type="text" id="product-search" placeholder="Search for products...">
+                <span class="material-symbols-outlined search-btn">search</span>
+            </div>
+            <div class="cart-button">
+                <span class="material-symbols-outlined">shopping_cart</span>
+                <span class="cart-count">3</span>
+            </div>
+        </div>
+        <div class="shop-content">
+            <div class="products-grid">
+                <!-- Product 1 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="/api/placeholder/400/320" alt="Aura Glow Serum">
+                    </div>
+                    <div class="product-info">
+                        <h3>Aura Glow Serum</h3>
+                        <p class="product-description">A luxurious facial serum that enhances your natural aura with
+                            vitamin C and hyaluronic acid.</p>
+                        <div class="product-footer">
+                            <span class="product-price">$49.99</span>
+                            <button class="add-to-cart-btn">
+                                <span class="material-symbols-outlined">shopping_cart</span>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Product 2 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="/api/placeholder/400/320" alt="Cosmic Balance Necklace">
+                    </div>
+                    <div class="product-info">
+                        <h3>Cosmic Balance Necklace</h3>
+                        <p class="product-description">Handcrafted crystal pendant that helps balance your energy and
+                            enhance your spiritual connection.</p>
+                        <div class="product-footer">
+                            <span class="product-price">$89.99</span>
+                            <button class="add-to-cart-btn">
+                                <span class="material-symbols-outlined">shopping_cart</span>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Product 3 -->
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="/api/placeholder/400/320" alt="Meditation Essence Candle">
+                    </div>
+                    <div class="product-info">
+                        <h3>Meditation Essence Candle</h3>
+                        <p class="product-description">Aromatherapy candle with essential oils designed to deepen your
+                            meditation practice and clear negative energy.</p>
+                        <div class="product-footer">
+                            <span class="product-price">$32.99</span>
+                            <button class="add-to-cart-btn">
+                                <span class="material-symbols-outlined">shopping_cart</span>
+                                Add to Cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="menu">
         <ul class="menu-content">
             <li><a href="/">
@@ -45,7 +119,7 @@
                 </a>
             </li>
             <li><a href="/shop.html">
-                    <span class="material-symbols-outlined">report</span>
+                    <span class="material-symbols-outlined">shopping_bag</span>
                     <span>Shop</span>
                 </a>
             </li>
@@ -66,7 +140,6 @@
         <label for="dark-mode-toggle" class="slider">
             <div class="circle"></div>
         </label>
-    </div>
     </div>
 
     <script type="module" src="./js/shop.js"></script>
