Adds 'busboy' dependency for handling file uploads. Fixes typos and alignment issues in frontend CSS and HTML. Corrects 'getPostsByID' route name to 'getPostByID'. No functional changes introduced.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,7 @@
         </div>
         <div class="notice-content">
             <div class="username">Aditya Sharma</div>
-            <div class="lable-message">Message<span class="number-message">3</span></div>
+            <div class="label-message">Message<span class="number-message">3</span></div>
             <div class="user-id">@_theadityasharmaa</div>
         </div>
     </button>
