--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -89,6 +89,10 @@
         </label>
     </div>
 
+    <button class="floating-action-btn">
+        <span class="material-symbols-outlined">add</span>
+    </button>
+
     <script type="module" src="./js/shop.js"></script>
 </body>
 
