split the code for the shop into 2 files for better readability and changed the iimageurl to allow the user to select their own image

--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -93,7 +93,8 @@
         <span class="material-symbols-outlined">add</span>
     </button>
 
-    <script type="module" src="./js/shop.js"></script>
+    <script type="module" src="./js/shop/shop.js"></script>
+    <script type="module" src="./js/shop/publishProduct.js"></script>
 </body>
 
 </html>
