--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -94,7 +94,7 @@
     </button>
 
     <script type="module" src="./js/shop/shop.js"></script>
-    <script type="module" src="./js/shop/publishProduct.js"></script>
+    <script type="module" src="./js/shop/createProductForm.js"></script>
 </body>
 
 </html>
