Changed index.css and index.html code for more strucutred represenation of title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,9 +12,13 @@
 
 <body>
     <div id="loading-screen">
-        <h1 class="aura-title">AURA</h1>
-        <p class="from-text">from</p>
-        <p class="magic-bus">Magic School Bus</p>
+        <button class="title-button">
+            <h1 class="aura-title">AURA</h1>
+        </button>
+        <button class="subtitle-button">
+            <p class="from-text">from</p>
+            <p class="magic-bus">Magic School Bus</p>
+        </button>
         <img src="./img/bus.png" class="bus" alt="Magic School Bus">
         <div class="wrapper">
             <div class="circle"></div>
