--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,7 +37,7 @@
                     <span>Home</span>
                 </a>
             </li>
-            <li><a href="/">
+            <li><a href="/search.html">
                     <span class="material-symbols-outlined">dashboard</span>
                     <span>Search</span>
                 </a>
