--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
+
+    <!-- Favicon Section -->
+    <link rel="icon" href="./img/AuraLogo.png" type="image/png" />
+
+
     <script src="./js/global.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/index.css">
@@ -32,63 +37,24 @@
 
     <div class="menu">
         <ul class="menu-content">
-            <li><a href="/">
-                    <span class="material-symbols-outlined">home</span>
-                    <span>Home</span>
-                </a>
-            </li>
-            <li><a href="/search.html">
-                    <span class="material-symbols-outlined">dashboard</span>
-                    <span>Search</span>
-                </a>
-            </li>
-            <li><a href="/messages.html">
-                    <span class="material-symbols-outlined">explore</span>
-                    <span>Messages</span>
-                </a>
-            </li>
-            <li><a href="/">
-                    <span class="material-symbols-outlined">analytics</span>
-                    <span>Notifications</span>
-                </a>
-            </li>
-            <li><a href="/">
-                    <span class="material-symbols-outlined">settings</span>
-                    <span>Create</span>
-                </a>
-            </li>
-            <li><a href="/profile.html">
-                    <span class="material-symbols-outlined">person</span>
-                    <span>Profile</span>
-                </a>
-            </li>
-            <li><a href="/shop.html">
-                    <span class="material-symbols-outlined">report</span>
-                    <span>Shop</span>
-                </a>
-            </li>
-            <li><a href="/">
-                    <span class="material-symbols-outlined">email</span>
-                    <span>More</span>
-                </a>
-            </li>
-            <li><a href="/login.html">
-                    <span class="material-symbols-outlined">login</span>
-                    <span>Login</span>
-                </a>
-            </li>
+            <li><a href="/"><span class="material-symbols-outlined">home</span><span>Home</span></a></li>
+            <li><a href="/search.html"><span class="material-symbols-outlined">dashboard</span><span>Search</span></a></li>
+            <li><a href="/messages.html"><span class="material-symbols-outlined">explore</span><span>Messages</span></a></li>
+            <li><a href="/"><span class="material-symbols-outlined">analytics</span><span>Notifications</span></a></li>
+            <li><a href="/"><span class="material-symbols-outlined">settings</span><span>Create</span></a></li>
+            <li><a href="/profile.html"><span class="material-symbols-outlined">person</span><span>Profile</span></a></li>
+            <li><a href="/shop.html"><span class="material-symbols-outlined">report</span><span>Shop</span></a></li>
+            <li><a href="/"><span class="material-symbols-outlined">email</span><span>More</span></a></li>
+            <li><a href="/login.html"><span class="material-symbols-outlined">login</span><span>Login</span></a></li>
         </ul>
     </div>
-
 
     <button id="btn-message" class="button-message">
         <div class="content-avatar">
             <div class="status-user"></div>
             <div class="avatar">
                 <svg class="user-img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                        d="M12,12.5c-3.04,0-5.5,1.73-5.5,3.5s2.46,3.5,5.5,3.5,5.5-1.73,5.5-3.5-2.46-3.5-5.5-3.5Zm0-.5c1.66,0,3-1.34,3-3s-1.34-3-3-3-3,1.34-3,3,1.34,3,3,3Z">
-                    </path>
+                    <path d="M12,12.5c-3.04,0-5.5,1.73-5.5,3.5s2.46,3.5,5.5,3.5,5.5-1.73,5.5-3.5-2.46-3.5-5.5-3.5Zm0-.5c1.66,0,3-1.34,3-3s-1.34-3-3-3-3,1.34-3,3,1.34,3,3,3Z"></path>
                 </svg>
             </div>
         </div>
@@ -104,10 +70,8 @@
             <div class="circle"></div>
         </label>
     </div>
-    </div>
 
     <script type="module" src="./js/index.js"></script>
-    <!-- <script type="module" src="./js/notifications.js"></script> -->
 </body>
 
 </html>
