Added New Loading Screen Animation to html file

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -145,6 +145,15 @@
         </div>
     </button>
 
+    <div class="slogan-container">
+        <span class="static-text">Social Media Platform With Integrated E-commerce Useful For</span>
+        <div class="dynamic-text-wrapper">
+            <span class="dynamic-text"></span>
+        </div>
+    </div>
+
+
+
     <div class="ui-switch">
         <label for="dark-mode-toggle" class="slider">
             <div class="circle"></div>
