Refines navbar styling and structure
Adjusts dimensions, positioning, and transitions for better responsiveness
Improves menu hover behavior and content layout consistency
Replaces `<div>` with semantic `<nav>` for accessibility enhancements

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="menu">
+    <nav class="menu">
         <ul class="menu-content">
             <li><a href="/">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
@@ -122,7 +122,7 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </nav>
 
     <button id="btn-message" class="button-message">
         <div class="content-avatar">
