--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AURA</title>
 
-    <!-- Favicon Section -->
     <link rel="icon" href="./img/AuraLogo.png" type="image/png" />
 
 
@@ -16,6 +15,18 @@
 </head>
 
 <body>
+    <div class="transparent-particle-bg">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="grid"></div>
+    </div>
+
     <div id="loading-screen">
         <button class="title-button">
             <h1 class="aura-title">AURA</h1>
@@ -152,7 +163,23 @@
         </div>
     </div>
 
-
+    <div class="links-container">
+        <div data-text="AURA" style="--r:-15;" class="glass-card">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="1em">
+                <path d="M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99zM11 16h2v2h-2zm0-6h2v4h-2z"/>
+            </svg>
+        </div>
+        <div data-text="Legal" style="--r:5;" class="glass-card">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="1em">
+                <path d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm0 2.18l7 3.12v5.7c0 4.83-3.4 9.36-7 10.8-3.6-1.44-7-5.97-7-10.8V6.3l7-3.12z"/>
+            </svg>
+        </div>
+        <div data-text="Links" style="--r:25;" class="glass-card">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="1em">
+                <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/>
+            </svg>
+        </div>
+    </div>
 
     <div class="ui-switch">
         <label for="dark-mode-toggle" class="slider">
