Refactors navbar styles and adds menu trigger area for improved interaction

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -47,6 +47,7 @@
     </div>
 
     <nav class="menu">
+        <div class="menu-trigger-area"></div>
         <ul class="menu-content">
             <li><a href="/">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
