Enhances links container visibility and logout handling
Adds visibility transitions and scaling effects to the links container for improved UI interactivity. Implements a logout button with token removal and redirection logic. Updates HTML structure for better alignment with new styles.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,7 +129,7 @@
                     <span>Login</span>
                 </a>
             </li>
-            <li><a href="/login.html">
+            <li><a href="/" class="logoutButton">
                     <svg style="transform: rotate(180deg);" xmlns="http://www.w3.org/2000/svg" fill="none"
                         viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -166,8 +166,8 @@
         </div>
     </div>
 
-    <div class="links-container" style="display: none;">
-        <div data-text="AURA" style="--r:-15;" class="glass-card">
+    <div class="links-container">
+        <div data-text=" AURA" style="--r:-15;" class="glass-card">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" height="1em">
                 <path d="M12 2L1 21h22L12 2zm0 3.99L19.53 19H4.47L12 5.99zM11 16h2v2h-2zm0-6h2v4h-2z" />
             </svg>
