Enhances meta tags and favicon consistency
Adds descriptive meta tags for improved SEO and user experience.
Standardizes favicon implementation across all HTML pages.
Fixes incorrect description in the registration page meta tag.

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,8 +7,9 @@
   <meta name="description" content="Login to AURA - Social Media Platform" />
   <title>AURA - Login</title>
   <script src="./js/global.js"></script>
-  <link rel="stylesheet" href="../css/styles.css" />
-  <link rel="stylesheet" href="../css/login.css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/AuraLogo.png" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/login.css" />
 </head>
 
 <body>
