--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AURA</title>
+    <meta name="description" content="Shop Page" />
+    <title>AURA - Shop</title>
     <script src="./js/global.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/AuraLogo.png" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/shop.css">
 </head>
