--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="AURA - Social Media Platform with E-commerce" />
     <title>AURA</title>
-
-    <link rel="icon" href="./img/AuraLogo.png" type="image/png" />
-
-
     <script src="./js/global.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/AuraLogo.png" />
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
