--- a/frontend/register.html
+++ b/frontend/register.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Login to AURA - Social Media Platform" />
+    <meta name="description" content="Register to AURA - Social Media Platform" />
     <title>AURA - Register</title>
     <script src="./js/global.js"></script>
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/AuraLogo.png" />
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/register.css" />
 </head>
